@@ -2,7 +2,7 @@
 <!-- $Id$ -->
 <metafile version="1.7" client="administrator">
 	<name>English (United Kingdom)</name>
-	<version>1.7.0</version>
+	<version>1.7.1</version>
 	<creationDate>2008-03-15</creationDate>
 	<author>Joomla! Project</author>
 	<authorEmail>admin@joomla.org</authorEmail>
