@@ -206,10 +206,12 @@ JUSERNAME="Імя Карыстальніка"
 JYES="Так"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Не магу падключыцца да MySQL."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Не атрымалася загрузіць Драйвер Базы Дадзеных: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Час сеанса скончыўся, калі ласка, перагрузіце старонку."
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Неабходнае поле: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Нявернае поле: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase::getInstance: Не магу падключыцца да базы дадзеных <br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="Ваш адрас электроннай пошты"
