@@ -3,7 +3,7 @@
 	version="1.7"
 	client="installation">
 	<name>Belarusian (BY)</name>
-	<version>1.7.0</version>
+	<version>1.7.1</version>
 	<creationDate>January 2011</creationDate>
 	<author>Dennis Hermatski</author>
 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
