@@ -1,4 +1,4 @@
-; $Id: en-GB.ini 21676 2011-06-25 07:43:49Z localicer $
+; $Id: en-GB.ini 22005 2011-08-24 09:01:34Z localicer $
 ; Joomla! Project
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt
@@ -206,10 +206,12 @@ JUSERNAME="Felhasználónév"
 JYES="Igen"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Nem lehetett kapcsolódni a MySQL-hez."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Nem tölthető be a következő adatbázis illesztőprogram: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="A munkamenete lejárt, kérjük, töltse be újra az oldalt."
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Kötelező mező: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Érvénytelen mező: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Nem lehetett kapcsolódni az adatbázishoz <br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="Az Ön e-mail címe"
