@@ -4,7 +4,7 @@
 	version="1.7"
 	client="installation">
 	<name>Hungarian (Magyar)</name>
-	<version>1.7.0</version>
+	<version>1.7.1</version>
 	<creationDate>January 2011</creationDate>
 	<author>Hungarian Translation Team</author>
 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
