@@ -208,10 +208,12 @@ JUSERNAME="Корисничко име"
 JYES="Да"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Није могућа конекција на MySQL."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Није могуће учитати драјвер базе: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Ваша сесија је истекла, молим поново учитајте страну."
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Обавезно: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Погрешно: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Није могућа конекција на базу <br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="Ваша ел. пошта"
