@@ -208,10 +208,12 @@ JUSERNAME="Korisničko ime"
 JYES="Da"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Nije moguća konekcija na MySQL."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Nije moguće učitati drajver baze: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Vaša sesija je istekla, molim ponovo učitajte stranu."
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Obavezno: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Pogrešno: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Nije moguća konekcija na bazu<br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="Vaša el. pošta"
