@@ -3,7 +3,7 @@
 	version="1.7"
 	client="installation">
 	<name>Serbian Latin</name>
-	<version>1.7.0</version>
+	<version>1.7.1</version>
 	<creationDate>2010-12-22</creationDate>
 	<author>joomla-serbia.com</author>
  	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
