@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 13-Sep-2011 Jean-Marie Simonet
  $ Updating installation ini files: af-ZA, bs-BA, da-DK, de-DE, el-GR, fr-FR, hr-HR, lv-LV, mk-MK, nb-NO, nn-NO, sk-SK, sv-SE, sy-IQ, uk-UA
+ $ Updating installation ini files: be-BY, hu-HU, sr-RS, sr-YU
  
 12-Sep-2011 Jean-Marie Simonet
  # [#26753] Login description containing markup displayed regardless of presence of content
